src/test/deca/context/valid/initialisation_variable.deca
// Description :
//initialisation d'une variable
//
// Resultats : 
// ok 

{int x = 3;}