src/test/deca/context/invalid/introduction_variable_non_declaree_2.deca
// Description :
//introduction d'une variable non initialisée via une affectation
//
// Resultats : 
// 	Erreur contextuelle 
//  Ligne 9 : "x n'a pas été déclarée"

{int y;
 y = x;}